update nav styles

--- a/src/styles/Static.scss
+++ b/src/styles/Static.scss
@@ -36,11 +36,11 @@ header {
       li {
         display: inline-block;
         text-align: center;
-        margin: 0 calc(0.2rem + 1.25vw);
+        margin: 0 calc(0.2rem + 1vw);
         @include mq("phone-small") {
-          margin: 0 calc(0.4rem + 1.25vw);
+          margin: 0 calc(0.4rem + 1vw);
         }
-        @include mq("phone") {
+        @include mq("phone-wide") {
           margin: 0 calc(0.5rem + 2vw);
           svg {
             width: calc(1.7rem + 0.5vw);
